src/Components/Navbar/navbar.css
/* navbar */

@media (max-width: 800px) {
    nav{
        
    }
    
    ul.nav-links{
        display: none;
    }
    
    div.sign-buttons{
        flex:1;
        justify-content: end;
        /* display: none;
        width: 200px; */
    }

    span.hamb-menu{
        display: flex !important;
    }

    nav .toggler{
        display: none;
    }
    
    li{
        padding-left: 10px;
        padding-right: 10px;
    }
}

@media (min-width: 800px) {
    div.hamb-menu{
        display: none !important;
    }
}


.MuiTooltip-tooltip{
    background-color: var(--primary-dark) !important;
    border: 1px solid white;
}

.MuiTooltip-arrow{
    color: var(--primary-dark) !important;
}

.MuiSwitch-thumb{
    background-color: var(--accent-color) !important;
}

.MuiSwitch-thum:hover{
    background-color: var(--secondary-dark) !important;
}

span.hamb-menu {
    display: none;
    padding:10px;
    cursor: pointer;
}

span.hamb-menu i.bi{
    font-size: x-large;
}

div.hamb-menu{
    display: none;
    z-index: 1;
    margin: 6px;
    position: absolute;
    width: -webkit-fill-available;
    border-radius: 10px;
    padding-left: 25px;
    padding-right: 25px;
    justify-content: space-between;
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: var(--primary-light);
}

 div.nav-links-hamb{
    display:flex;
    flex-direction: column;
    row-gap: 10px;
    justify-content: space-between;
    list-style-type: none;
    color: inherit;
}

div.nav-links-hamb li .bt-nav-link:hover {
    background-color:var(--primary-light-darker)
}



 div.sign-buttons-hamb{
    display:flex;
    justify-content: space-between;
    align-items: center;
}

div.navbar{
    
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #2B283A;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    padding-left: 20px;
    padding-right: 20px;

}

div.navbar .nav-brand{
    
    color: var(--secondary-color);
    font-weight:bolder !important;
    font-size: 30px;
    text-decoration: none;
    padding: 0.5rem;

    transition: all .1s ease-in-out;
    /* border: 1px solid transparent; */
}

div.navbar .nav-brand:hover{
    box-shadow: rgba(0, 0, 0, 0.308) 0px 8px 13px;
    transform: translate3d(0px, -1px, 0px);
    border-radius: 6px;
}

.nav-link{
    text-decoration: none;
    color: var(--primary-text);
    padding: 5px;
}

Button.bt-nav-link{
    padding: 0px;
    
    
}
Button.bt-nav-link:hover{
    background: var(--primary-light);
}


.nav-link:hover{
    text-decoration: none;
    
}

.nav-link-active{
    text-decoration: none;
    color: var(--primary-dark);
    background-color: var(--primary-light);
    padding: 5px;
    border-radius: 4px;
    width: 100%;
}
.nav-link-active:hover{
    text-decoration: none;
    background-color: var(--primary-color);
    color:white;
 
}

.nav-links{
    padding-left: 2em;
    display: flex;
    flex-direction: row;
    list-style-type: none;
    margin-right: auto;
}

.sign-buttons{
    display: flex;
    justify-content: space-between;
    height: 40px;
    
    flex-direction: row;
    align-content: center;
}

.nav-button{
          /* height: 30px; */
    width: 78px;
    min-width: auto !important;
    /* cursor: pointer; */
    /* font-weight: bold !important; */
    padding-right: 20px !important;
    margin-left: 5px !important;
    margin-right: 5px !important;
    padding-left: 20px !important;
}

label.nav-username{
    margin-right: 10px;
    margin-left: 10px;
}

.nav-profilepicture{
    height: 40px;
    width: 40px;
    align-self: center;
    object-fit: cover;
    border-radius: 50%;
    margin-right: 10px;
    margin-left: 10px;
}


/* Tooltip container */
.tooltip {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  
  /* Tooltip text */
  .tooltip .tooltip-text {
    align-self: center;
    z-index:2;
    visibility: hidden;
    opacity: 0;
    transition: 0.5s;
    white-space: nowrap;
    background-color: var(--primary-dark);
    color: rgb(240, 240, 240);
    padding: 2px 3px;
    border-radius: 6px;
   
    /* Position the tooltip text - see examples below! */
    position: absolute;
    top: 120%;
  
  }
  
  /* Show the tooltip text when you mouse over the tooltip container */
  .tooltip:hover .tooltip-text {
    visibility: visible;
    opacity:1;
    transition: 0.5s;
    
  }

li{
    padding-left: 5px;
    padding-right: 5px;
    color: inherit;
}

.toggler {
    margin:0px !important;
}

.toggler--slider {
    width: 25px;
    height: 13px;
    background-color: #2B283A;
    border-radius: 2rem;
    margin-inline: 7px;
    cursor: pointer;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    border: 1px solid black;
    box-sizing: content-box;
}

.toggler--slider--circle {
    height: 13px;
    width: 13px;
    background-color: white;
    border-radius: 50%;
}

